# react-nativ-linguaquest

./: .env  .env.example  .gitignore  app.json  metro.config.js  package-lock.json  package.json  posthog-setup-report.md  skills-lock.json
.claude/skills/integration-expo/: SKILL.md
.claude/skills/integration-expo/references/: EXAMPLE.md  basic-integration-1.3-conclude.md  identify-users.md  react-native.md
app/: _layout.tsx  index.tsx  language-select.tsx  onboarding.tsx
app/(auth)/: sign-in.tsx  sign-up.tsx
app/(tabs)/: _layout.tsx  ai-teacher.tsx  chat.tsx  home.tsx  learn.tsx  profile.tsx
app/api/stream/: session+api.ts  stream-token+api.ts
app/api/stream/agent/: start+api.ts
app/api/stream/agent/[callId]/: [sessionId]+api.ts
app/lesson/: [id].tsx
components/: LessonCard.tsx  SocialButton.tsx  TabBar.tsx  VerificationModal.tsx  audio-lesson-screen.tsx  auth-screen.tsx  custom-tab-bar.tsx  tab-placeholder-screen.tsx  verification-modal.tsx
constants/: images.ts
constants/theme/: colors.ts  index.ts  typography.ts
data/: languages.ts  lessons.ts
hooks/: useLessonAudioCall.ts
lib/: backend-url.ts  lesson-audio.ts  posthog.ts  posthog.tsx  stream-server.ts  vision-agent-server.ts
prompts/: 03-onboarding-ui.md  05-clerk.md
store/: language-store.ts  languageStore.ts  learningStore.ts
vision-agent/: README.md  agent.py  pyproject.toml
